Add Express server to serve Web App alongside bot server

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-﻿GEMINI_API_KEY=AIzaSyCpWmbu7MXJEyD8tPg3GMZDvBqEvixvLvs
+GEMINI_API_KEY=AIzaSyCpWmbu7MXJEyD8tPg3GMZDvBqEvixvLvs
 VITE_GEMINI_API_KEY=AIzaSyCpWmbu7MXJEyD8tPg3GMZDvBqEvixvLvs
 
 # AI-INTIZOM API Kalit Sozlamalari
@@ -8,5 +8,10 @@ VITE_GEMINI_API_KEY=AIzaSyCpWmbu7MXJEyD8tPg3GMZDvBqEvixvLvs
 # 4. Kalitni nusxalang
 # 5. Yuqoridagi GEMINI_API_KEY=... qatoriga haqiqiy kalitingizni qo'ying        
 # 6. Dasturni qayta ishga tushiring: npm run dev
-
 # MUHIM: API kalitingizni hech kimga bermang!
+# Telegram Bot Configuration
+TELEGRAM_BOT_TOKEN=8410285583:AAHmc2-YwK4MtDXzrmYFk-2n79RgtCRvpPE
+TELEGRAM_BOT_USERNAME=intizomAi_bot
+
+# Web App URL (deploy qilgandan keyin o'zgartiring)
+WEB_APP_URL=http://localhost:3000
