--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "bot": "tsx server/index.ts",
-    "bot:dev": "tsx watch server/index.ts"
+    "bot:dev": "tsx watch server/index.ts",
+    "start": "npm run build && npm run bot"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "express": "^4.18.2",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-circular-progressbar": "^2.2.0",
