--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm install && npm run build"
+buildCommand = "npm install"
 
 [deploy]
-startCommand = "npm run bot"
+startCommand = "npm run build && npm run bot"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
