--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm install --omit=dev && npm run build"
+buildCommand = "npm install && npm run build"
 
 [deploy]
-startCommand = "npm run bot"
+startCommand = "npx tsx server/index.ts"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
