--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,5 @@
-[build]
-builder = "NIXPACKS"
-buildCommand = "npm install && npm run build"
-
 [deploy]
-startCommand = "npx tsx server/index.ts"
+startCommand = "npm run build && npx tsx server/index.ts"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
