--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [deploy]
-startCommand = "npm run build && npx tsx server/index.ts"
+startCommand = "npm run build && npm run bot"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
