--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,7 @@
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "include": ["**/*"],
+  "exclude": ["server", "node_modules", "dist"]
 }
