--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "bot": "node ./server-dist/index.js",
     "bot:dev": "tsx --tsconfig tsconfig.server.json watch server/index.ts",
-    "start": "npm run build && npm run bot"
+    "start": "node ./server-dist/index.js"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
