--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "noEmit": false,
+    "allowImportingTsExtensions": false,
     "types": ["node"]
   },
   "include": ["server/**/*.ts"],
