--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,8 +5,8 @@ nixPkgs = ["nodejs_20", "npm"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["npx prisma generate", "npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "npx prisma migrate deploy && npm start"
 
