--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build:web": "vite build",
     "build:server": "tsc --project tsconfig.server.json",
-    "build": "npm run build:web && npm run build:server",
+    "build": "npx prisma generate && npm run build:web && npm run build:server",
     "preview": "vite preview",
     "bot": "node ./server-dist/index.js",
     "bot:dev": "tsx --tsconfig tsconfig.server.json watch server/index.ts",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "@prisma/client": "^6.19.0",
     "express": "^4.18.2",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "prisma": "^6.19.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
